index.css
body {
  font-family: "Open Sans", sans-serif
}
body[class*=noscroll] {
  overflow: hidden;
}
.container, .container-wide {
  margin: 0 auto;
  padding: 0 15px;
  width: 90%;
  max-width: 800px;
}
.container-wide {
  max-width: 1200px;
}
.full-height {
  min-height: 100vh;
}
a {
  color: #B36A30;
}
a:hover {
  box-shadow: 0 2px 0 0 #B36A30;
}
.button, [type=submit], button {
  background-color: #B36A30;
}
.text-muted {
  color: gray;
}
.flex-row {
  display: flex;
}
.flex-row > * {
  flex: 1;
}

/* must have a position: relative parent to work;
 * vertically centered content lives in a child element, not this one */
.vertical-centering, .vertical-centering > * {
  position: absolute;
  top: 0; bottom: 0; right: 0; left: 0;
  margin: auto;
}
.vertical-centering > * {
  display: table;
  width: 100%;
}

/*
 * Hero & Nav
 */
.nav-button {
  text-align: right;
  height: 0;
}
.nav-button a {
  z-index: 2;
  position: relative;
  background-color: transparent;
  top: 1.5rem;
  color: gray;
}
.hero {
  min-height: 100vh;
  background-attachment: fixed;
  background-color: #373a3c;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: right top;
  position: relative;
}
.sunset-cliffs {
  background-image: url(/images/sunset-cliffs-large.jpeg);
}
.sunset-cliffs .brand, .sunset-cliffs label, .sunset-cliffs .text {
  color: white;
  text-shadow: 0 0 5px rgba(0,0,0,0.1);
}
.hero .brand {
  font-size: 2rem;
}
.hero h1.brand {
  font-size: 3rem;
}
h1.brand small {
  font-size: 55%;
  line-height: 0;
}
.hero h1.brand small {
  font-size: 40%;
}
@media (min-width: 720px) {
  .hero h1.brand {
    font-size: 20vh;
    line-height: 24vh;
    margin-top: -10vh;
    margin: -6vh 10% 0;
  }
}
.hero .trailing {
  position: absolute;
  top: 100%;
  width: 100%;
  text-align: center;
}
.hero .trailing .logo {
  width: 180px;
  margin-top: -56px;
}

/*
 * Logo
 */
.logo-small img {
  height: 2.5rem;
  vertical-align: middle;
}
.logo-small:hover {
  box-shadow: none;
}

/*
 * Sections
 */
.bg-dark, .bg-light {
  font-size: 1.5rem;
  padding: 8rem 0;
}
.bg-dark:first-child, .bg-light:first-child {
  padding-top: 0;
}
.bg-dark {
  background-color: #20221F;
  color: #F0BFA1;
}
.bg-light {
  background-color: #F0BFA1;
  color: white;
}
.bg-light [type=text], .bg-light [type=email] {
  color: gray;
}

.bg-tint {
  background-color: rgba(0,0,0,0.2);
  padding: 1.5rem;
  border-radius: .5rem;
}

/*
 * Brand font
 */
.brand {
  font-family: 'Dancing Script', serif;
}

/*
 * Week grid
 */
.life {
  width: 100%;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -moz-flex-flow: row wrap;
  flex-flow: row wrap;
  padding-bottom: 5rem;
}
.life > *, .life > a {
  text-decoration: none;
  color: #fef8fc;
  width: 1.923076923%; /* 100/52 */
  display: block;
  text-align: center;
  box-shadow: none;
}
.life > a.past {
  color: #fae3e3;
}

/*
 * tooltips
 */
[data-tooltip] {
  position: relative;
}
[data-tooltip]:before{
  content: '';
  display: none;
  position: absolute;
  z-index: 1;
  bottom: 30px;
  left: 25%;
  width: 0;
  height: 0;

  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-top: 5px solid rgba(0,0,0,.72);
}
[data-tooltip]:after {
  content: attr(data-tooltip);
  display: none;
  position: absolute;
  z-index: 2;
  bottom: 35px;
  left: -5.5rem;
  width: 12rem;

  color: #fff;
  font-size: 1rem;
  padding: 0.5rem;
  text-align: center;

  background: rgba(0,0,0,.72);
  border-radius: 2px;
}
[data-tooltip]:hover::before, [data-tooltip]:hover::after {
  display:block;
}

/*
 * Week Detail panel
 */
.week-detail-wrap {
  position: fixed;
  top: 0; right: 0; bottom: 0; left: 0;
  background-color: rgba(255,255,255,0.6);
  z-index: 3;
}
.week-detail {
  position: absolute;
  top: 0; right: 0; bottom: 0;
  width: 90%;
  max-width: 35rem;
  background-color: white;
  box-shadow: 0 0 25px rgba(0,0,0,0.2);
  padding: 0 2rem;
  overflow-y: scroll;
}
.close-week-detail {
  position: fixed;
  display: block;
  top: 0; right: 0; bottom: 0; left: 0;
  color: transparent;
}
.close-week-detail:hover {
  color: transparent;
}

.emojiPicker {
  left: auto !important;
  top: auto !important;
}

/*
 * Images
 */
img {
  max-width: 100%
}

.life-calendar-image img {
  border-radius: .2em;
}


/*
 * Payment Options
 */
.payment-options {
  display: flex;
  justify-content: space-around;
  margin-top: 4rem;
}
.payment-option {
  width: 30%;
  text-align: center;
  border: 3px solid white;
  border-radius: 1.5rem;
  padding: 1.5rem;
  color: white;
  text-decoration: none;
  cursor: pointer;
}
.payment-option:hover {
  box-shadow: 0 0 15px white;
}
.payment-option h2 {
  position: relative;
  padding-bottom: 90%;
  height: 0;
}
.payment-option h2 > div {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;

  background-color: #373a3c;
  background-image: url(/images/sunset-cliffs-large.jpeg);
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-size: cover;

  border: 5px solid white;
  box-shadow: 0 0 10px rgba(0,0,0,0.3) inset;
  border-radius: 100%;
  text-shadow: 0 0 5px rgba(0,0,0,0.3);
}
.currency-marker {
  vertical-align: super;
  font-size: 1.5rem;
}
.amount {
  font-size: 4rem;
}


/* Inputs */
input[disabled] {
  opacity: .7;
}

/* Payment form */
.payment {
  position: fixed;
  top: 0; bottom: 0; right: 0; left: 0;
  background-color: rgba(255,255,255,0.6);
  z-index: 2;
}
.payment-inner {
  background-color: white;
  padding: 1.5rem;
  border-radius: .5rem;
  box-shadow: 0 0 25px rgba(0,0,0,0.2);
}
.input{
  position: absolute;
  height: 37px
}
.cardPaymentView {
  position: relative;
  height: 73px;
  margin-bottom: 1em;
}
.cardPaymentView>.input {
  left: 0;
  right: 0
}
.cardPaymentView>.cardNumberInput {
  z-index: 10
}
.cardPaymentView>.cardExpiresInput {
  ime-mode: disabled;
  top: 36px;
  right: auto;
  width: 50%;
  z-index: 9
}
/* ... */

